<resources>
    <string name="app_name">Memento</string>
    <string name="hello">Hello,</string>
    <string name="kunal">Kunal</string>
    <string name="hello_kunal">Hello, Kunal</string>
    <string name="search_here">Search Here</string>
    <string name="btnactionbutton">btnActionButton</string>
    <string name="new_folder">New Folder</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="add_user_name">Add User Name</string>
    <string name="add">Add</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_should_be_atleast_6_characters">Password should be atleast 6 characters</string>
    <string name="sign_out">Sign Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="invalid_password">Invalid Password</string>
</resources>