<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet"
    android:padding="@dimen/dim_20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/create_new_folder"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_20dp"
        android:autofillHints="false"
        android:background="@drawable/drawable_8dp_round"
        android:hint="@string/folder_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/dim_16dp"
        android:paddingVertical="@dimen/dim_18dp"
        android:textColorHint="@color/color_8f8f8f50"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_12dp"
        android:paddingVertical="@dimen/dim_16dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="@dimen/dim_16sp"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>