<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_0c090c"
    android:paddingHorizontal="@dimen/dim_16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_4dp"
        android:autofillHints="false"
        android:background="@drawable/drawable_8dp_round"
        android:hint="@string/xyz_gmail_com"
        android:inputType="text"
        android:paddingHorizontal="@dimen/dim_16dp"
        android:paddingVertical="@dimen/dim_18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_8f8f8f50"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintTop_toBottomOf="@id/tvUserNameLabel" />

    <TextView
        android:id="@+id/tvUserNameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textColor="@color/color_FE7272"
        android:textSize="@dimen/dim_12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserNameError" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_4dp"
        android:autofillHints="false"
        android:background="@drawable/drawable_8dp_round"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/dim_16dp"
        android:paddingVertical="@dimen/dim_18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_8f8f8f50"
        android:textSize="@dimen/dim_20sp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel" />

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password"
        android:textColor="@color/color_FE7272"
        android:textSize="@dimen/dim_12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_24dp"
        android:background="@drawable/drawable_8dp_round"
        android:gravity="center"
        android:paddingVertical="@dimen/dim_16dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_16sp"
        app:layout_constraintBottom_toTopOf="@id/tvRegister" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dim_12dp"
        android:layout_height="@dimen/dim_12dp"
        android:indeterminate="true"
        app:indicatorColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>